# HexapodStereovision

./: CMakeLists.txt  extrinsics.yml  intrinsics.yml  main.cpp
